spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body {
 }
 
 .hero-section {
-	min-height: 650px;
+	min-height: 550px;
 	display: flex;
 	align-items: flex-end;
 }
@@ -505,7 +505,7 @@ body {
 
 .text-info-nbs {
 	max-width: 988px;
-	margin: 120px auto;
+	margin: 80px auto;
 	font-family: 'Inter';
 	font-style: italic;
 	font-weight: 600;
@@ -1296,4 +1296,137 @@ p {
 .circle-connect-2 {
 	background-color: #fff;
 	z-index: 1000;
+}
+
+.adding-margin {
+	margin-top: 120px;
+}
+
+@media screen and (max-width: 960px) {
+	.adding-margin {
+		margin-top: 80px;
+	}
+}
+
+.animated span {
+	animation: topToBottom 12s linear infinite 0s;
+	-ms-animation: topToBottom 12s linear infinite 0s;
+	-webkit-animation: topToBottom 12s linear infinite 0s;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+
+.animated span:nth-child(2) {
+	animation-delay: 2s;
+	-ms-animation-delay: 2s;
+	-webkit-animation-delay: 2s;
+}
+
+.animated span:nth-child(3) {
+	animation-delay: 4s;
+	-ms-animation-delay: 4s;
+	-webkit-animation-delay: 4s;
+}
+
+.animated span:nth-child(4) {
+	animation-delay: 6s;
+	-ms-animation-delay: 6s;
+	-webkit-animation-delay: 6s;
+}
+
+.animated span:nth-child(5) {
+	animation-delay: 8s;
+	-ms-animation-delay: 8s;
+	-webkit-animation-delay: 8s;
+}
+
+.animated span:nth-child(6) {
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
+
+@-moz-keyframes topToBottom {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 0;
+		-moz-transform: translateY(40px);
+	}
+	45% {
+		opacity: 1;
+		-moz-transform: translateY(0px);
+	}
+	50% {
+		opacity: 1;
+		-moz-transform: translateY(0px);
+	}
+	60% {
+		opacity: 0;
+		-moz-transform: translateY(-40px);
+	}
+	75% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@-webkit-keyframes topToBottom {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 0;
+		-webkit-transform: translateY(40px);
+	}
+	45% {
+		opacity: 1;
+		-webkit-transform: translateY(0px);
+	}
+	50% {
+		opacity: 1;
+		-webkit-transform: translateY(0px);
+	}
+	60% {
+		opacity: 0;
+		-webkit-transform: translateY(-40px);
+	}
+	75% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@-ms-keyframes topToBottom {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 0;
+		-ms-transform: translateY(40px);
+	}
+	45% {
+		opacity: 1;
+		-ms-transform: translateY(0px);
+	}
+	50% {
+		opacity: 1;
+		-ms-transform: translateY(0px);
+	}
+	60% {
+		opacity: 0;
+		-ms-transform: translateY(-40px);
+	}
+	75% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
 }
